--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <li><i data-feather="home"></i><span class="title">Home</span></li>
         <li><i data-feather="clock"></i></i><span class="title">Design</span></li>
         <li><i data-feather="circle"></i><span class="title">Development</span></li>
-        <li><i data-feather="archive"></i><span class="title">Resources</span></li>
+        <li><i data-feather="archive"></i><span class="title">Archive</span></li>
         <li><i data-feather="menu"></i><span class="title">More</span></li>
       </ul>
     </nav>
@@ -46,14 +46,10 @@
         <!-- Main menu -->
       <div class="tab-content">
         <div class="tab-top-bar">
-          <img src="/src/img/icon-512x512.png" class="logo">
+            <img src="/src/img/icon-512x512.png" class="logo">
         </div>
   
         <div class="tab-post">
-          <div class="tab-post-media">
-            <!-- responsive youtube embed-->
-            <div class='embed-container'><iframe src='https://www.youtube.com/embed/QILiHiTD3uc' frameborder='0' allowfullscreen></iframe></div>
-          </div>
   
           <div class="tab-post-content">
             <h1>Title</h1>
@@ -65,7 +61,7 @@
       <!-- Design menu -->
       <div class="tab-content">
         <div class="tab-top-bar">
-          <h1 class="title">Design</h1>
+            <img src="/src/img/icon-512x512.png" class="logo">
         </div>
          <div id="stopwatch"></div>
       </div>
@@ -73,7 +69,7 @@
     <!-- Development menu -->
       <div class="tab-content">
         <div class="tab-top-bar">
-          <h1 class="title">Development</h1>
+            <img src="/src/img/icon-512x512.png" class="logo">
         </div>
         <div class="tab-placeholder">Tab 2 content</div>
       </div>
@@ -81,7 +77,7 @@
     <!-- Resources menu -->
       <div class="tab-content">
         <div class="tab-top-bar">
-          <h1 class="title">Resources</h1>
+            <img src="/src/img/icon-512x512.png" class="logo">
         </div>
         <div class="tab-placeholder">Tab 3 content</div>
       </div>
@@ -90,12 +86,12 @@
         <div class="tab-top-bar">
           <i class="align-left icon ion-android-add"></i>
           <i class="align-left icon ion-android-search"></i>
-          <h1 class="title">More</h1>
+          <img src="/src/img/icon-512x512.png" class="logo">
           <i class="align-right icon ion-share"></i>
           <i class="align-right icon ion-gear-a"></i>
         </div>
         <ul>
-            <a style="text-decoration: none;color: black;" href="#InstallApp" id="install_button" hidden><li><img src="http://placehold.it/50/eeeeee/eeeeee/">Install app <i class="icon ion-chevron-right"></i></li></a>
+            <a style="text-decoration: none;color: black;" href="#InstallApp" id="install_button" hidden><li><img src="/src/img/placeholder.png">Install app <i class="icon ion-chevron-right"></i></li></a>
       </div>
     </div>
   </div>
