--- a/p/tab3.html
+++ b/p/tab3.html
@@ -5,39 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fitness Trckr</title>
 
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="../manifest.json">
     <meta name="theme-color" content="#f9f9f9">
 
-    <link rel="apple-touch-icon" href="/src/img/icon-114x114.png">
-    <link rel="apple-touch-icon" href="/src/img/icon-192x192.png">
-    <link rel="apple-touch-icon" href="/src/img/icon-256x256.png">
+    <link rel="apple-touch-icon" href="../src/img/icon-114x114.png">
+    <link rel="apple-touch-icon" href="../src/img/icon-192x192.png">
+    <link rel="apple-touch-icon" href="../src/img/icon-256x256.png">
     <meta name="apple-mobile-web-app-status-bar" content="#f9f9f9">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-    <link rel="stylesheet" href="/src/css/style.css">
+    <link rel="stylesheet" href="../src/css/style.css">
 
 </head>
 <body>
     
-
     <script>document.getElementsByTagName("html")[0].classList.add('js');</script>
-    <script>var ActiveTab = 0; </script>
+    <script>var ActiveTab = 3; </script>
 
   <div class="tab-container">
     <!-- nav -->
     <nav class="tab-controller">
       <ul>
-        <a href="#" ><li><i data-feather="home"></i><span class="title">Home</span></li></a>
+        <a href="../index.html" ><li><i data-feather="home"></i><span class="title">Home</span></li></a>
         <a href="/p/tab1.html" ><li><i data-feather="clock"></i></i><span class="title">Design</span></li></a>
         <a href="/p/tab2.html" ><li><i data-feather="circle"></i><span class="title">Development</span></li></a>
-        <a href="/p/tab3.html" ><li><i data-feather="archive"></i><span class="title">Archive</span></li></a>
+        <a href="#" ><li><i data-feather="archive"></i><span class="title">Archive</span></li></a>
         <a href="/p/tab4.html" ><li><i data-feather="menu"></i><span class="title">More</span></li></a>
       </ul>
     </nav>
   
     <!-- content -->
     <div class="tab-content-container">
+
+        <div class="tab-content"></div><div class="tab-content"></div><div class="tab-content"></div>
 
         <!-- Settings -->
         <div class="tab-content">
@@ -50,7 +51,7 @@
             <i class="align-right icon ion-gear-a"></i>
             </div>
 
-            <div class="tab-placeholder">Home page</div>
+            <div class="tab-placeholder">Tab 3 content</div>
 
         </div>
 
@@ -65,10 +66,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.28.0/feather.min.js" integrity="sha512-7x3zila4t2qNycrtZ31HO0NnJr8kg2VI67YLoRSyi9hGhRN66FHYWr7Axa9Y1J9tGYHVBPqIjSE1ogHrJTz51g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-    <script src="/src/js/script.js"></script>
-    <script src="/src/js/app.js"></script>
+    <script src="../src/js/script.js"></script>
+    <script src="../src/js/app.js"></script>
 
-    <script src="/src/js/typeahead.bundle.js"></script>
-    <script src="/src/js/search.js"></script>
+    <script src="../src/js/typeahead.bundle.js"></script>
+    <script src="../src/js/search.js"></script>
 
 </html>
