--- a/p/tab4.html
+++ b/p/tab4.html
@@ -53,6 +53,7 @@
 
             <ul>
                 <a style="text-decoration: none;color: black;" href="#InstallApp" id="install_button" hidden><li><img src="/src/img/placeholder.png">Install app <i class="icon ion-chevron-right"></i></li></a>
+                <li style="color: rgb(165, 165, 165);">Version <span id="versionDisplay">???</span> </li>
             </ul>
 
         </div>
