--- a/p/tab3.html
+++ b/p/tab3.html
@@ -1,6 +1,8 @@
-<html lang="en">
+<!DOCTYPE html>
+<html lang="en-gb" translate="no">
 <head>
     <meta charset="UTF-8">
+    <meta name="google" content="notranslate">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fitness Trckr</title>
@@ -27,11 +29,11 @@
     <!-- nav -->
     <nav class="tab-controller">
       <ul>
-        <a href="../index.html" ><li><i data-feather="home"></i><span class="title">Home</span></li></a>
-        <a href="/p/tab1.html" ><li><i data-feather="clock"></i></i><span class="title">Design</span></li></a>
-        <a href="/p/tab2.html" ><li><i data-feather="circle"></i><span class="title">Development</span></li></a>
-        <a href="#" ><li><i data-feather="archive"></i><span class="title">Archive</span></li></a>
-        <a href="/p/tab4.html" ><li><i data-feather="menu"></i><span class="title">More</span></li></a>
+        <li> <a href="../index.html" aria-label="Home page"> <i data-feather="home"></i><span class="title">Home</span> </a> </li>
+        <li> <a href="/p/tab1.html" aria-label="Tab 1"> <i data-feather="clock"></i></i><span class="title">Design</span> </a> </li>
+        <li> <a href="/p/tab2.html" aria-label="Tab 2"> <i data-feather="circle"></i><span class="title">Development</span> </a> </li>
+        <li> <a href="#" aria-label="Tab 3"> <i data-feather="archive"></i><span class="title">Archive</span> </a> </li>
+        <li> <a href="/p/tab4.html" aria-label="Tab 4"> <i data-feather="menu"></i><span class="title">More</span> </a> </li>
       </ul>
     </nav>
   
@@ -68,8 +70,5 @@
 
     <script src="../src/js/script.js"></script>
     <script src="../src/js/app.js"></script>
-
-    <script src="../src/js/typeahead.bundle.js"></script>
-    <script src="../src/js/search.js"></script>
 
 </html>
