--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
-<html lang="en">
+<!DOCTYPE html>
+<html lang="en-gb" translate="no">
 <head>
     <meta charset="UTF-8">
+    <meta name="google" content="notranslate">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fitness Trckr</title>
@@ -14,7 +16,7 @@
     <meta name="apple-mobile-web-app-status-bar" content="#f9f9f9">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+    <link rel="stylesheet" href="/src/css/ionicons.min.css">
     <link rel="stylesheet" href="/src/css/style.css">
 
 </head>
@@ -27,11 +29,11 @@
     <!-- nav -->
     <nav class="tab-controller">
       <ul>
-        <a href="#" ><li><i data-feather="home"></i><span class="title">Home</span></li></a>
-        <a href="/p/tab1.html" ><li><i data-feather="clock"></i></i><span class="title">Design</span></li></a>
-        <a href="/p/tab2.html" ><li><i data-feather="circle"></i><span class="title">Development</span></li></a>
-        <a href="/p/tab3.html" ><li><i data-feather="archive"></i><span class="title">Archive</span></li></a>
-        <a href="/p/tab4.html" ><li><i data-feather="menu"></i><span class="title">More</span></li></a>
+        <li> <a href="#" aria-label="Home page"> <i data-feather="home"></i><span class="title">Home</span> </a> </li>
+        <li> <a href="/p/tab1.html" aria-label="Tab 1"> <i data-feather="clock"></i></i><span class="title">Design</span> </a> </li>
+        <li> <a href="/p/tab2.html" aria-label="Tab 2"> <i data-feather="circle"></i><span class="title">Development</span> </a> </li>
+        <li> <a href="/p/tab3.html" aria-label="Tab 3"> <i data-feather="archive"></i><span class="title">Archive</span> </a> </li>
+        <li> <a href="/p/tab4.html" aria-label="Tab 4"> <i data-feather="menu"></i><span class="title">More</span> </a> </li>
       </ul>
     </nav>
   
@@ -42,11 +44,11 @@
         <div class="tab-content">
 
             <div class="tab-top-bar">
-            <i class="align-left icon ion-android-add"></i>
-            <i class="align-left icon ion-android-search"></i>
-            <img src="/src/img/icon-512x512.png" class="logo">
-            <i class="align-right icon ion-share"></i>
-            <i class="align-right icon ion-gear-a"></i>
+              <i class="align-left icon ion-android-add"></i>
+              <i class="align-left icon ion-android-search"></i>
+              <img src="/src/img/icon-512x512.png" class="logo" alt="Fitness Trckr">
+              <i class="align-right icon ion-share"></i>
+              <i class="align-right icon ion-gear-a"></i>
             </div>
 
             <div class="tab-placeholder">Home page</div>
@@ -66,8 +68,5 @@
 
     <script src="/src/js/script.js"></script>
     <script src="/src/js/app.js"></script>
-
-    <script src="/src/js/typeahead.bundle.js"></script>
-    <script src="/src/js/search.js"></script>
 
 </html>
